--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -22,6 +22,7 @@
         <tr>
           <th>Name</th>
           <th>SKU</th>
+          <th>Sell Price</th>
           <th>Category</th>
           <th>Brand</th>
           <th>Stock</th>
@@ -49,6 +50,7 @@
               <% end %>
             </td>
             <td><%= product.sku %></td>
+            <td>$<%= product.price %></td>
             <td><%= product.category %></td>
             <td><%= product.brand %></td>
             <td>
