--- a/app/views/sales_uploads/new.html.erb
+++ b/app/views/sales_uploads/new.html.erb
@@ -1,6 +1,5 @@
-<%= render "shared/sidebar" %>
 <div class="content">
   <div class="container mx-auto px-2 mt-2">
-    <%= render 'form', sales_upload: @sales_upload %>
+    <%= render 'form' %>
   </div>
 </div>
