--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -351,30 +351,30 @@
 <!-- Testimonial End -->
 
 <!-- Footer Start -->
-<div class="container-fluid bg-dark text-white px-sm-3 px-md-5 mb-0">
-    <div class="row">
-        <div class="col-lg-7 col-md-8">
+<div class="container-fluid bg-dark text-white mt-5 py-5 px-sm-3 px-md-5">
+    <div class="row pt-5">
+        <div class="col-lg-7 col-md-6">
             <div class="row">
-                <div class="col-md-6">
-                    <h3 class="text-primary mb-2">Get In Touch</h3>
-                    <p class="mb-1"><i class="fa fa-map-marker-alt mr-2"></i>Buenos Aires, Argentina</p>
-                    <p class="mb-1"><i class="fa fa-map-marker-alt mr-2"></i>Lima, Perú</p>
-                    <p class="mb-1"><i class="fa fa-phone-alt mr-2"></i>+51 986716032</p>
-                    <p class="mb-2"><i class="fa fa-envelope mr-2"></i>contact@grovana.cloud</p>
-                    <div class="d-flex justify-content-start mb-2">
+                <div class="col-md-6 mb-5">
+                    <h3 class="text-primary mb-4">Get In Touch</h3>
+                    <p><i class="fa fa-map-marker-alt mr-2"></i>Buenos Aires, Argentina</p>
+                    <p><i class="fa fa-map-marker-alt mr-2"></i>Lima, Perú</p>
+                    <p><i class="fa fa-phone-alt mr-2"></i>+51 986716032</p>
+                    <p><i class="fa fa-envelope mr-2"></i>contact@grovana.cloud</p>
+                    <div class="d-flex justify-content-start mt-4">
                         <a class="btn btn-outline-light btn-social mr-2" href="#"><i class="fab fa-facebook-f"></i></a>
                         <a class="btn btn-outline-light btn-social mr-2" href="#"><i class="fab fa-linkedin-in"></i></a>
                         <a class="btn btn-outline-light btn-social" href="#"><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
-                <div class="col-md-6">
-                    <h3 class="text-primary mb-2">Quick Links</h3>
+                <div class="col-md-6 mb-5">
+                    <h3 class="text-primary mb-4">Quick Links</h3>
                     <div class="d-flex flex-column justify-content-start">
-                        <a class="text-white mb-1" href="#"><i class="fa fa-angle-right mr-2"></i>Home</a>
-                        <a class="text-white mb-1" href="#"><i class="fa fa-angle-right mr-2"></i>About Us</a>
-                        <a class="text-white mb-1" href="#"><i class="fa fa-angle-right mr-2"></i>Our Services</a>
-                        <a class="text-white mb-1" href="#"><i class="fa fa-angle-right mr-2"></i>Pricing Plan</a>
-                        <a class="text-white mb-0" href="#"><i class="fa fa-angle-right mr-2"></i>Contact Us</a>
+                        <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Home</a>
+                        <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>About Us</a>
+                        <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Our Services</a>
+                        <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Pricing Plan</a>
+                        <a class="text-white" href="#"><i class="fa fa-angle-right mr-2"></i>Contact Us</a>
                     </div>
                 </div>
             </div>
@@ -382,13 +382,14 @@
     </div>
 </div>
 
-<div class="container-fluid bg-dark text-white border-top px-sm-3 px-md-5 m-0" style="border-color: #3E3E4E !important;">
+<div class="container-fluid bg-dark text-white border-top py-4 px-sm-3 px-md-5" style="border-color: #3E3E4E !important;">
     <div class="row">
-        <div class="col-lg-6 text-center text-md-left">
-            <p class="m-0 text-white">&copy; <a href="#">2024 Grovana</a>. All Rights Reserved.</p>
+        <div class="col-lg-6 text-center text-md-left mb-3 mb-md-0">
+            <p class="m-0 text-white">&copy; <a href="#">2024 Grovana</a>. All Rights Reserved.
+
         </div>
         <div class="col-lg-6 text-center text-md-right">
-            <ul class="nav d-inline-flex m-0">
+            <ul class="nav d-inline-flex">
                 <li class="nav-item">
                     <a class="nav-link text-white py-0" href="#">Privacy</a>
                 </li>
@@ -406,44 +407,3 @@
     </div>
 </div>
 <!-- Footer End -->
-
-<style>
-/* Resetear márgenes y padding generales */
-html, body {
-    margin: 0;
-    padding: 0;
-    overflow-x: hidden;
-}
-
-.container-fluid {
-    margin: 0 !important;
-    padding: 0 !important;
-}
-
-/* Agregar espacio antes del footer */
-.container-fluid.bg-dark {
-    margin-top: 3rem !important;
-    padding: 0 !important;
-}
-
-/* Espacio dentro del footer solo arriba */
-.container-fluid.bg-dark .row:first-of-type {
-    padding-top: 2rem !important;
-    padding-bottom: 0 !important;
-}
-
-/* Ajustar el último footer específicamente */
-.container-fluid.bg-dark:last-child {
-    margin: 0 !important;
-    padding: 1rem 0 !important;
-}
-
-.row {
-    margin: 0 !important;
-}
-
-.container-fluid:last-child .row:last-child {
-    margin-bottom: 0 !important;
-    padding-bottom: 0 !important;
-}
-</style>
