--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -325,6 +325,9 @@
                 height: "200px",
                 loading: "Loading...",
                 messages: {empty: "No data available"},
+                thousands: ".",
+                decimal: ",",
+                prefix: "$",
                 library: {
                   plugins: {
                     legend: {
@@ -342,6 +345,9 @@
                 height: "200px",
                 loading: "Loading...",
                 messages: {empty: "No data available"},
+                thousands: ".",
+                decimal: ",",
+                prefix: "$",
                 library: {
                   scales: {
                     y: {
@@ -363,6 +369,8 @@
                 height: "200px",
                 loading: "Loading...",
                 messages: {empty: "No data available"},
+                thousands: ".",
+                decimal: ",",
                 donut: true,
                 library: {
                   plugins: {
@@ -385,6 +393,9 @@
                 height: "200px",
                 loading: "Loading...",
                 messages: {empty: "No data available"},
+                thousands: ".",
+                decimal: ",",
+                prefix: "$",
                 donut: true,
                 library: {
                   plugins: {
